[TexMap] Sprinkle range-based for-loops in GraphicsLayerTextureMapper, TextureMapperLayer https://bugs.webkit.org/show_bug.cgi?id=137271

Reviewed by Sergio Villar Senin.

Switch to using C++11 range-based for-loops in the
GraphicsLayerTextureMapper and TextureMapperLayer classes.

The for loops that remained unchanged either do further computation
with the loop index or must iterate over the container in reverse.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::toTextureMapperLayerVector):
(WebCore::GraphicsLayerTextureMapper::flushCompositingState):
* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::computeTransformsRecursive):
(WebCore::TextureMapperLayer::paintSelfAndChildren):
(WebCore::TextureMapperLayer::computeOverlapRegions):
(WebCore::TextureMapperLayer::paintUsingOverlapRegions):
(WebCore::TextureMapperLayer::~TextureMapperLayer):
(WebCore::TextureMapperLayer::setChildren):
(WebCore::TextureMapperLayer::descendantsOrSelfHaveRunningAnimations):
(WebCore::TextureMapperLayer::applyAnimationsRecursively):


Canonical link: https://commits.webkit.org/155099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174168 268f45cc-cd09-0410-ab3c-d52691b4dbfc